fixed spacing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,6 +85,7 @@ p {
 	border-radius: 10px;
 	padding: 10px;
 	text-align: center;
+	margin-bottom: 40px;
 }
 
 .pure-button-warning,
